# libswf

./: .gitignore  .gitmodules  Doxyfile  Makefile.am  configure.ac  libswf.pc.in
libswf/: Makefile.am  buffer.h  internal.h  parser.c  parser.h  swf.c  swf.h
test/: Makefile.am  test.c
